infra/.dev/kind/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orasi
  labels:
    name: orasi
    app: orasi
